contrib/db_pools/codegen/tests/ui-fail-stable/database-syntax.stderr
error[E0432]: unresolved import `rocket_db_pools`
 --> tests/ui-fail-stable/database-syntax.rs:1:5
  |
1 | use rocket_db_pools::{deadpool_postgres, Database};
  |     ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `rocket_db_pools`
  |
help: there is a crate or module with a similar name
  |
1 - use rocket_db_pools::{deadpool_postgres, Database};
1 + use rkt_db_pools::{deadpool_postgres, Database};
  |

error: cannot find attribute `database` in this scope
  --> tests/ui-fail-stable/database-syntax.rs:31:3
   |
31 | #[database("foo")]
   |   ^^^^^^^^
   |
help: `database` is an attribute that can be used by the derive macro `Database`, you might be missing a `derive` attribute
   |
32 + #[derive(Database)]
33 | struct H {
   |

error: cannot find attribute `database` in this scope
  --> tests/ui-fail-stable/database-syntax.rs:27:3
   |
27 | #[database("foo")]
   |   ^^^^^^^^
   |
help: `database` is an attribute that can be used by the derive macro `Database`, you might be missing a `derive` attribute
   |
28 + #[derive(Database)]
29 | struct G(deadpool_postgres::Pool, deadpool_postgres::Pool);
   |

error: cannot find attribute `database` in this scope
  --> tests/ui-fail-stable/database-syntax.rs:23:3
   |
23 | #[database("foo")]
   |   ^^^^^^^^
   |
help: `database` is an attribute that can be used by the derive macro `Database`, you might be missing a `derive` attribute
   |
24 + #[derive(Database)]
25 | struct F;
   |

error: cannot find attribute `database` in this scope
  --> tests/ui-fail-stable/database-syntax.rs:16:3
   |
16 | #[database("foo")]
   |   ^^^^^^^^
   |
help: `database` is an attribute that can be used by the derive macro `Database`, you might be missing a `derive` attribute
   |
17 + #[derive(Database)]
18 | enum D {  }
   |

error: cannot find attribute `database` in this scope
  --> tests/ui-fail-stable/database-syntax.rs:12:3
   |
12 | #[database("some-name", name = "another")]
   |   ^^^^^^^^
   |
help: `database` is an attribute that can be used by the derive macro `Database`, you might be missing a `derive` attribute
   |
13 + #[derive(Database)]
14 | struct C(deadpool_postgres::Pool);
   |

error: cannot find attribute `database` in this scope
  --> tests/ui-fail-stable/database-syntax.rs:8:3
   |
 8 | #[database("some-name", "another")]
   |   ^^^^^^^^
   |
help: `database` is an attribute that can be used by the derive macro `Database`, you might be missing a `derive` attribute
   |
 9 + #[derive(Database)]
10 | struct B(deadpool_postgres::Pool);
   |

error: cannot find attribute `database` in this scope
 --> tests/ui-fail-stable/database-syntax.rs:4:3
  |
4 | #[database(123)]
  |   ^^^^^^^^
  |
help: `database` is an attribute that can be used by the derive macro `Database`, you might be missing a `derive` attribute
  |
5 + #[derive(Database)]
6 | struct A(deadpool_postgres::Pool);
  |
